fixed footer on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,7 +13,7 @@
     flex: 1 0 auto;
     padding: var(--space) var(--space) 0;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .Site-content:after {
